# OmniMorph

./: .gitignore  CLAUDE.md  LICENSE  README.md  check_avro.py  merged_avro_data.jsonl  pyproject.toml  test1.csv  yt_sample_1000.parquet
assets/: schema-of-userdata1.md  stats-of-userdata1.md
omni_morph/: __init__.py  main.py  omo_cli.py  omo_wizard.py
omni_morph/data/: __init__.py  _io.py  converter.py  exceptions.py  extractor.py  filesystems.py  formats.py  merging.py  query_engine.py  sampling.py  statistics.py
omni_morph/utils/: __init__.py  _csv_schema.py  convert_summary.py  file_utils.py  json2md.py
test/: test_json2md.py  test_statistics.py
test/data/sample-data/avro/: userdata1_stats.json
test/data/sample-data/csv/: userdata1_stats.json
test/data/sample-data/parquet/: userdata1_stats.json
test/data/sample-data/xlsx/: userdata1.xlsx  userdata2.xlsx  userdata3.xlsx  userdata4.xlsx  userdata5.xlsx
test/integration/: test_avro_query_support.py  test_cli.py  test_json2md.py  test_merge.py  test_statistics.py  test_wizard.py
test/unit/: test_io.py  test_roundtrip.py
